# yi-min-ai

./: .env.example  .gitattributes  .gitignore  DEPLOY_LINUX.md  LICENSE  QUICK_START_FEISHU.md  README.md  START_EXAMPLES.md  VERIFICATION_CHECKLIST.md  pyproject.toml
agent/: __init__.py  app.py  main.py  runtime_paths.py
agent/cli/: __init__.py  main.py
agent/config/: __init__.py  environment.py  loader.py  models.py
agent/core/: __init__.py  compaction.py  context.py  llm_factory.py  loop.py  provider.py  provider_manager.py
agent/debug/: __init__.py  llm_probe.py
agent/deploy/: __init__.py  cli.py  linux.py
agent/gateway/: __init__.py  command_queue.py  feishu_cards.py  instance_lock.py  main.py  normalizer.py  server.py
agent/memory/: __init__.py  always_on.py  ledger_store.py  memory_extractor.py  memory_store.py  mflow_bridge.py  note_store.py  session_archive.py
agent/observability/: __init__.py  (+5 more)
config/: agent.linux.yaml  agent.yaml  mcp_servers.yaml  providers.yaml
docs/: CHANGELOG.md  FEISHU_SETUP_GUIDE.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  KNOWN_ISSUES.md  TROUBLESHOOTING.md  yiminai-design-v1.1-supplement.md  yiminai-design-v1.1.md  yiminai-design-v1.md  yiminai-design-v1.standard.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: install_linux.sh  run_linux_service.sh  test_llm_thinking.py  yimin
tests/: test_agent_main.py  test_app.py  test_logging.py  test_runtime_paths.py
workspace/: MEMORY.md  SOUL.md
workspace-main/: SOUL.md  agent.db
workspace-min/: agent.db  sessions.db
(+99 files in other folders)
