[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yi-min-ai"
version = "0.1.0"
description = "Yi Min AI Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "ag-ui-protocol>=0.1.15",
  "anthropic>=0.51.0",
  "click>=8.1.7",
  "duckduckgo-search>=6.0.0",
  "fastapi>=0.115.0",
  "lark-oapi>=1.5.5",
  "lancedb>=0.15.0",
  "mflow-ai>=0.3.6",
  "openai>=1.30.0",
  "croniter>=2.0.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "pytz>=2024.1",
  "tiktoken>=0.7.0",
  "uvicorn>=0.34.0",
]

[project.scripts]
yimin = "agent.deploy.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.hatch.build.targets.wheel.force-include]
"agent/web/static" = "agent/web/static"
"config" = "config"
